# classroom-manager

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
include/models/: classroom.h  hash.h  indexfilerow.h  myfile.h  myregex.h  person.h  student.h
src/: main.cpp
src/models/: classroom.cpp  hash.cpp  indexfilerow.cpp  myfile.cpp  myregex.cpp  person.cpp  student.cpp
